--- a/app.yaml
+++ b/app.yaml
@@ -13,8 +13,8 @@
 # limitations under the License.
 
 runtime: python39
-# automatic_scaling:
-#   max_concurrent_requests: 80
+automatic_scaling:
+  max_instances: 10
 # runtime_config:
 #   python_version: 3
 # env: flex
