--- a/app.yaml
+++ b/app.yaml
@@ -20,7 +20,7 @@ automatic_scaling:
 # env: flex
 env_variables:
   GITHUB_TOKEN: "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"
-  LOG_FILE: "project-1-project-1-16/logfile.txt"
+  LOG_FILE: "/tmp/logfile.txt"
   LOG_LEVEL: "2"
   # NODE_ENV: "development"
 
