--- a/app.yaml
+++ b/app.yaml
@@ -19,7 +19,7 @@ automatic_scaling:
 #   python_version: 3
 # env: flex
 env_variables:
-  GITHUB_TOKEN: "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"
+  GITHUB_TOKEN: ${{ secrets.GitHub_Token }}
   LOG_FILE: "/tmp/logfile.txt"
   LOG_LEVEL: "2"
   # NODE_ENV: "development"
